deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trigra
  namespace: default
  # annotations:
    # kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: trigra.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trigra
            port:
              number: 80
